--- a/main.css
+++ b/main.css
@@ -72,10 +72,7 @@
 }
 
 .project-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 100%;
+  height: 100%;
 }
 
 .project-card img {
